# AICS

./: .gitattributes  .gitignore  README.md
code_chap_2_3_student/exp_2_1_mnist_mlp/: mlp-273-786-10epoch.npy
code_chap_2_3_student/exp_2_1_mnist_mlp/stu_upload/: layers_1.py  mnist_mlp_cpu.py
code_chap_2_3_student/exp_2_2_mnist_mlp_dlp/: main_exp_2_2.py
code_chap_2_3_student/exp_3_3_style_transfer/: main_exp_3_3.py
code_chap_5_student/exp_5_2_matmul_opt/: 01_scalar.mlu  02_scalar_nram.mlu  03_vector_nram.mlu  04_vector_nram_blocks.mlu  05_vector_nram_blocks_pipe3.mlu  06_vector_sram_unions_pipe5.mlu  test.sh
code_chap_7_student/bert_train/: readme-bert.txt  run_squad.py
pe_exp_student/: .gitignore  modelsim.ini  vsim.wlf
pe_exp_student/data/: data_gen.py  neuron  result  weight
pe_exp_student/sim/: build_0.do  build_1.do  build_2.do  compile_0.f  compile_1.f  compile_2.f  tb_top_0.v  tb_top_1.v  tb_top_2.v
pe_exp_student/sim/work/: _info  (+4 more)
pycnnl/cnnl_python/: CMakeLists.txt  README.md  build_pycnnl.sh  pycnnl.py  setup.py  testcnnlpython.py
pycnnl/cnnl_python/env/: env.sh
pycnnl/cnnl_python/env/neuware/include/: cndev.h  cnnl.h  cnnl_extra.h  cnrt.h  cnrtc.h
pycnnl/cnnl_python/env/neuware/lib64/: readme
pycnnl/cnnl_python/include/: cnnl.h  layers.h  net.h  public.h  tool.h
pycnnl/cnnl_python/src/: .layers.cc.swp  .layers.h.swp  .net.cc.swo  .net.cc.swp  .net.h.swo  .net.h.swp  layers.cc  net.cc  public.cc  tool.cc
pycnnl/cnnl_python/swig/: pycnnl.i  pycnnl_wrap.cxx
pycnnl/cnnl_python/swig/tmp/: pycnnlmlp.i  pycnnlmlp.py  pycnnlmlp_wrap.cxx
(+39 files in other folders)
